カスタムできるのか？

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,9 @@
     <label>土曜日色:
       <input type="color" id="saturdayColor" value="#e0e0ff">
     </label>
-
+    <label>祝日の背景色:
+      <input type="color" id="holidayBgColor" value="#fff5f5">
+    </label>
     <button onclick="applySettings()">適用</button>
     <button onclick="resetSettings()">リセット</button>
   </div>
